Fix: Runner info not aligned with their titles

--- a/src/app/runner-info/runner-info.component.css
+++ b/src/app/runner-info/runner-info.component.css
@@ -24,6 +24,14 @@
   padding: 10px;
 }
 
+.runner-info-content span {
+  height: 20px;
+}
+
+.runner-info-content strong {
+  height: 20px;
+}
+
 .runner-info-content-header {
   display: grid;
   grid-template-columns: 1fr;
